# GPT

./: .gitignore  pyproject.toml
lesson_1/: bow.ipynb  n-gram.ipynb
lesson_2/: word_embedding.ipynb
lesson_3/: nplm.ipynb  rnn.ipynb
lesson_4/: s2s.ipynb
lesson_5/: lesson_5.ipynb  self_attention.ipynb
lesson_6/: transformers.ipynb
lesson_7/: gpt.ipynb  lang.txt
