[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Xiaomin Wu <243399634@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jieba = "^0.42.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
